# blogs_gpt

./: .env  Dockerfile  compose.yaml  pyproject.toml
blogs_gpt/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
